<resources>
    <string name="app_name">Trashure</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_bank_sampah_fragment">This is bank sampah fragment</string>
    <string name="title_bank_sampah">Bank Sampah</string>
    <string name="upload_fragment">this is upload fragment</string>
    <string name="title_upload">Upload</string>
    <string name="title_news">News</string>
    <string name="title_profile">Profile</string>
    <string name="this_is_news_fragment">This is news fragment</string>
    <string name="this_is_profile_fragment">this is profile fragment</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="scan">Scan</string>
    <string name="default_web_client_id">943406522679-doe469liof76vf86aq2if9sa1jg860p1.apps.googleusercontent.com</string>
    <string name="unknown">Tidak Diketahui</string>
    <string name="terkini">Berita Terkini</string>
    <string name="semua">Semua Berita</string>
    <string name="title">judul</string>
    <string name="author">penulis</string>
    <string name="tanggal">dd-mm-yyyy</string>
    <string name="back">kembali ke halaman utama</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="judul_artc">judul artikel</string>
    <string name="deskripsi_artc">deskripsi artikel</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="title_article">Artikel</string>
    <string name="title_platform">Siap Memulai Pengelolaan Sampah\nyang Bertanggung Jawab?</string>
    <string name="title_platform1">Biarkan kami memberi tahu anda mengenai platform yang bergerak di bidang pengelolaan sampah yang memiliki inovasi untuk mewujudkan Indonesia Bebas Sampah</string>
    <string name="title_platform2">Berikut kami berikan informasi mengenai tempat di beberapa kota-kota besar yang dapat menampung sampah anda agar dapat di kelola dengan baik</string>
    <string name="kota_contoh">Bekasi</string>
    <string name="see_all">see all</string>
    <string name="nama_tempat">nama tempat</string>
    <string name="alamat_tempat">alamat tempat</string>
    <string name="know_far">Ingin mengetahui tentang kami lebih lanjut\ndan mengelola sampah anda?</string>
    <string name="gotoweb">Kunjungi website kami sekarang!</string>
    <string name="login">Sign in</string>
    <string name="alamat_email">Email</string>
    <string name="kata_sandi">Password</string>
    <string name="masuk">Sign in</string>
    <string name="masuk_dengan_google">Sign in with Google</string>
    <string name="apakah_anda_belum_punya_akun">don\'t have an account yet?</string>
    <string name="daftar">Sign up</string>
    <string name="sign_up">Sign up</string>
    <string name="nama_lengkap">Name</string>
    <string name="konfirmasi_kata_sandi">Confirmation Password</string>
    <string name="punya_akun">already have account?</string>
    <string name="result">Hasil Analisis: Anorganik</string>
    <string name="cardboard">Cardboard</string>
    <string name="resultDesc">Desc Result</string>
    <string name="success">Result</string>
    <string-array name="data_name">
        <item>Langkah Awal Menuju Lingkungan Bersih</item>
        <item>Peran Penting Masyarakat dalam Daur Ulang Sampah Anorganik</item>
        <item>Inovasi Teknologi dalam Daur Ulang Sampah Anorganik</item>
        <item>Manfaat Ekonomi dari Daur Ulang Sampah Anorganik</item>
        <item>Menghadapi Tantangan Daur Ulang Sampah Anorganik di Indonesia</item>
    </string-array>
    <string-array name="data_description1">
        <item>Daur ulang sampah anorganik adalah salah satu cara paling efektif untuk mengurangi jumlah sampah yang menumpuk di tempat pembuangan akhir. Sampah anorganik seperti plastik, kaca, dan logam, yang sering kali memerlukan waktu ratusan tahun untuk terurai, dapat didaur ulang menjadi produk baru yang berguna. Proses ini tidak hanya mengurangi volume sampah, tetapi juga membantu mengurangi dampak negatif sampah terhadap lingkungan, seperti pencemaran tanah dan air. Dengan mengalihkan sampah dari tempat pembuangan akhir ke fasilitas daur ulang, kita berkontribusi pada penurunan risiko kesehatan bagi masyarakat sekitar.</item>
        <item>Kesadaran masyarakat akan pentingnya daur ulang sangat berpengaruh dalam mengurangi sampah anorganik. Ketika masyarakat memahami dampak negatif dari sampah anorganik terhadap lingkungan, mereka cenderung lebih bertanggung jawab dalam mengelola sampah yang mereka hasilkan. Sampah anorganik seperti plastik, kaca, dan logam memiliki waktu penguraian yang sangat lama, sehingga penanganan yang tepat sangat diperlukan. Dengan meningkatkan kesadaran, masyarakat akan lebih termotivasi untuk mendaur ulang dan mengurangi penggunaan bahan-bahan anorganik sekali pakai.</item>
        <item>Teknologi modern telah membawa perubahan besar dalam proses daur ulang sampah anorganik. Berbagai mesin canggih kini mampu memproses sampah plastik, logam, dan kaca dengan efisiensi tinggi, mengubah limbah menjadi bahan baku yang dapat digunakan kembali. Sebagai contoh, mesin penghancur dan pemilah plastik dapat memisahkan jenis plastik yang berbeda, kemudian mencairkannya untuk dijadikan butiran plastik baru yang siap diolah menjadi produk lain. Inovasi ini tidak hanya meningkatkan efisiensi proses daur ulang tetapi juga mengurangi biaya operasional.</item>
        <item>Daur ulang sampah anorganik tidak hanya bermanfaat bagi lingkungan, tetapi juga memiliki nilai ekonomi yang signifikan. Industri daur ulang menciptakan lapangan kerja di berbagai sektor, mulai dari pengumpulan dan pemilahan sampah hingga proses daur ulang itu sendiri dan pemasaran produk hasil daur ulang. Dengan semakin banyaknya orang yang terlibat dalam rantai pasok daur ulang, ini memberikan kontribusi positif terhadap perekonomian lokal dan nasional.</item>
        <item>Indonesia menghadapi berbagai tantangan dalam upaya mendaur ulang sampah anorganik. Infrastruktur yang belum memadai menjadi salah satu kendala utama, di mana banyak daerah yang belum memiliki fasilitas daur ulang yang memadai. Selain itu, sistem pengelolaan sampah yang belum terintegrasi dengan baik menyebabkan banyak sampah anorganik yang tidak terolah dengan optimal. Kondisi ini diperparah oleh kurangnya teknologi canggih yang mampu memproses berbagai jenis sampah anorganik secara efisien.</item>
    </string-array>
    <string-array name="data_description2">
        <item>Selain mengurangi jumlah sampah, daur ulang juga memainkan peran penting dalam menghemat sumber daya alam. Proses produksi bahan baru dari sumber daya alam sering kali memerlukan energi yang besar dan menimbulkan polusi. Sebaliknya, mendaur ulang bahan-bahan yang sudah ada membutuhkan lebih sedikit energi dan dapat mengurangi emisi gas rumah kaca. Misalnya, mendaur ulang aluminium menghemat hingga 95% energi dibandingkan dengan memproduksi aluminium baru dari bijih bauksit. Oleh karena itu, daur ulang adalah langkah penting dalam mengurangi jejak karbon dan memperlambat perubahan iklim.</item>
        <item>Partisipasi aktif masyarakat dalam memilah sampah dan mengirimkannya ke pusat daur ulang adalah langkah nyata yang dapat membantu mengurangi limbah yang mencemari lingkungan. Memilah sampah sejak dari rumah tangga memastikan bahwa bahan-bahan yang masih bisa didaur ulang tidak bercampur dengan sampah organik yang sulit diproses. Pusat daur ulang kemudian dapat mengolah bahan-bahan ini menjadi produk baru yang berguna, mengurangi jumlah sampah yang berakhir di tempat pembuangan akhir. Partisipasi ini tidak hanya berdampak positif pada lingkungan tetapi juga menciptakan peluang ekonomi bagi industri daur ulang.</item>
        <item>Selain sampah plastik dan logam, teknologi baru juga memungkinkan daur ulang limbah elektronik yang lebih kompleks, seperti ponsel dan komputer. Komponen elektronik mengandung berbagai bahan berharga seperti emas, perak, dan tembaga yang dapat diekstraksi dan digunakan kembali. Teknologi canggih dapat memisahkan komponen ini dengan presisi tinggi, mengurangi risiko pencemaran lingkungan akibat bahan kimia berbahaya yang terdapat dalam perangkat elektronik. Dengan demikian, teknologi ini berperan penting dalam mengurangi dampak buruk limbah elektronik terhadap lingkungan.</item>
        <item>Selain menciptakan lapangan kerja, mendaur ulang sampah juga menghasilkan produk bernilai dari bahan-bahan bekas. Produk daur ulang seperti plastik, logam, dan kaca dapat dijual kembali ke pasar, mengurangi ketergantungan pada bahan baku baru yang lebih mahal dan sering kali terbatas. Ini tidak hanya mengurangi biaya produksi bagi produsen tetapi juga memberikan keuntungan ekonomi bagi industri daur ulang. Misalnya, logam hasil daur ulang dapat digunakan kembali dalam industri konstruksi, otomotif, dan manufaktur, memberikan nilai tambah yang signifikan.</item>
        <item>Kurangnya kesadaran masyarakat juga menjadi tantangan besar dalam program daur ulang di Indonesia. Banyak masyarakat yang belum terbiasa memilah sampah di rumah, sehingga sampah anorganik dan organik sering tercampur. Edukasi dan kampanye tentang pentingnya daur ulang perlu ditingkatkan agar masyarakat lebih memahami manfaat dan cara-cara mendaur ulang sampah dengan benar. Dukungan dari berbagai pihak, termasuk pemerintah, sangat penting untuk mendorong partisipasi aktif masyarakat dalam program daur ulang.</item>
    </string-array>
    <string name="resultTime">Lama Terurai</string>
</resources>