<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_article" />

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_bank_sampah"
        android:icon="@drawable/baseline_wallet_24"
        android:title="@string/title_bank_sampah" />

    <item
        android:id="@+id/navigation_upload"
        android:icon="@drawable/baseline_upload_file_24"
        android:title="@string/title_upload" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/title_profile" />

</menu>