<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.trashure.ui.article.ArticleFragment"
        android:label="@string/title_article"
        tools:layout="@layout/fragment_article"/>

    <fragment
        android:id="@+id/navigation_bank_sampah"
        android:name="com.example.trashure.ui.banksampah.BankSampahFragment"
        android:label="@string/title_bank_sampah"
        tools:layout="@layout/fragment_bank_sampah" />

    <fragment
        android:id="@+id/navigation_upload"
        android:name="com.example.trashure.ui.upload.UploadFragment"
        android:label="@string/title_upload"
        tools:layout="@layout/fragment_upload">
        <action
            android:id="@+id/act_upload_to_success"
            app:destination="@+id/navigation_upload_success" />
    </fragment>

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.example.trashure.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.trashure.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>