<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.banksampah.BankSampahFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?android:attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitCenter"
                    android:alpha="0.4"
                    android:src="@drawable/waste4chg_nobg" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/title_platform"
                        android:textColor="@android:color/black"
                        android:textSize="29sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:justificationMode="inter_word"
                        android:maxLines="3"
                        android:minLines="3"
                        android:text="@string/title_platform1"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:justificationMode="inter_word"
                        android:maxLines="3"
                        android:minLines="3"
                        android:text="@string/title_platform2"
                        android:textColor="@android:color/black"
                        android:textSize="20sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </FrameLayout>

            <RelativeLayout
                android:id="@+id/headerLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kota_contoh"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true" />

                <TextView
                    android:id="@+id/seeAllTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/see_all"
                    android:textSize="16sp"
                    android:textColor="@android:color/holo_blue_dark"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true" />
            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTempat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_tempat"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/know_far"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/hyperlinkTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gotoweb"
                    android:textSize="20sp"
                    android:autoLink="web"
                    android:textColorLink="@color/tosca_darken"
                    android:textStyle="bold" />


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>